// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asset handler can remove asset documents: Nothing removed in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`asset handler can remove asset documents: doc1 with no image asset 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "name": "Scooter",
}
`;

exports[`asset handler can remove asset documents: doc2 with no image asset 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "name": "Dupe",
}
`;

exports[`asset handler can remove asset documents: doc3 with no image asset 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "name": "Tandem",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Nothing rewritten if pattern doesnt match Sanity asset 1`] = `
Object {
  "_id": "refsDatMuxAsset",
  "_type": "bike",
  "video": Object {
    "_type": "mux.video",
    "asset": Object {
      "_ref": "datMuxAsset",
    },
  },
}
`;

exports[`asset handler can rewrite documents / queue downloads: Nothing rewritten in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc1 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/6dcdb82c282dbe0a09ff7a6b58b639732f2fb8de-3360x840.png",
    "_type": "image",
    "caption": "Scooter bike",
    "nested": Object {
      "_sanityAsset": "image@file://./images/6dcdb82c282dbe0a09ff7a6b58b639732f2fb8de-3360x840.png",
      "_type": "image",
    },
  },
  "name": "Scooter",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc2 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/6dcdb82c282dbe0a09ff7a6b58b639732f2fb8de-3360x840.png",
    "_type": "image",
  },
  "name": "Dupe",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc3 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/31befc6dfa0315d6c535b8a57e34f86c18eb5f20-310x282.jpg",
    "_type": "image",
  },
  "name": "Tandem",
}
`;
